--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@ search_exclude: true
 image: images/logo.png
 ---
 
+#### Welcome :)
+
 2021년 open된 seoyeon choi의 블로그
 
 [fastpages](https://github.com/fastai/fastpages)
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+![]({{site.baseurl}}/images/img.jpg)
 
 # Posts
