--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>2021년 open된 seoyeon choi의 블로그</p>
+        <div class="home"><h4 id="welcome-">Welcome :)</h4>
+
+<p>2021년 open된 seoyeon choi의 블로그</p>
 
 <p><a href="https://github.com/fastai/fastpages">fastpages</a></p>
 
-<p><img src="/chch/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p><img src="/chch/images/img.jpg" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
