--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-#### Welcome :)
-
-2021년 open된 seoyeon choi의 블로그
-
-[fastpages](https://github.com/fastai/fastpages)
+### Welcome :)
+### 2021년 open된 seoyeon choi의 블로그
 
 ![]({{site.baseurl}}/images/img.jpg)
 
