deploy: ebe198f1dc864f1925d780c49c2abb09cc7e827b

--- a/index.html
+++ b/index.html
@@ -83,11 +83,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h4 id="welcome-">Welcome :)</h4>
-
-<p>2021년 open된 seoyeon choi의 블로그</p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a></p>
+        <div class="home"><h3 id="welcome-">Welcome :)</h3>
+<h3 id="2021년-open된-seoyeon-choi의-블로그">2021년 open된 seoyeon choi의 블로그</h3>
 
 <p><img src="/chch/images/img.jpg" alt="" /></p>
 
