--- a/page2/index.html
+++ b/page2/index.html
@@ -87,7 +87,7 @@ window.onload = wrap_img;
         <div class="home"><h3 id="welcome-">Welcome :)</h3>
 <h3 id="2021년-open된-seoyeon-choi의-블로그">2021년 open된 seoyeon choi의 블로그</h3>
 
-<p><img src="/chch/images/img.jpg" alt="" /></p>
+<p><img src="/chch/images/study.jpg" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
