--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ image: images/logo.png
 ### Welcome :)
 ### 2021년 open된 seoyeon choi의 블로그
 
-![]({{site.baseurl}}/images/study.jpg)
+![]({{site.baseurl}}/images/img.jpg)
 
 # Posts
