--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: images/logo.png
 ---
 
 ### Welcome :)
-### 2021년 open된 seoyeon choi의 블로그
+### 2021년 open된 seoyeon choi의 블로그!
 
 ![]({{site.baseurl}}/images/study.jpg)
 
