deploy: adf66b15c6ecc94f8f93b221500c85c717da2e01

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h3 id="welcome-">Welcome :)</h3>
-<h3 id="2021년-open된-seoyeon-choi의-블로그">2021년 open된 seoyeon choi의 블로그!</h3>
+<h3 id="2021년-open된-seoyeon-choi의-study-블로그">2021년 open된 seoyeon choi의 study 블로그!</h3>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
 
