deploy: 46368fa2b7fa6ef11ecbf2b3ff5c6692107ae9c4

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ window.onload = wrap_img;
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
 
+<h4 id="login-후-git-push-입력시-이런-error가-뜹니다">login 후 git push 입력시 이런 error가 뜹니다.</h4>
+<p><img src="/chch/images/study.jpg" alt="" /></p>
+
 <h1 id="posts">Posts</h1>
 
 
