--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ image: images/logo.png
 ![]({{site.baseurl}}/images/study.jpg)
 
 #### login 후 git push 입력시 이런 error가 뜹니다.
-![]({{site.baseurl}}/images/study.jpg)
+![]({{site.baseurl}}/images/123.jpg)
 
 
 # Posts
