--- a/page2/index.html
+++ b/page2/index.html
@@ -86,7 +86,7 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h3 id="welcome-">Welcome :)</h3>
 
-<p><img src="/chch/images/study.jpg" alt="" /></p>
+<p><img src="/chch/images/finnandjake.png" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
