--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ window.onload = wrap_img;
   <li>:)</li>
 </ul>
 
-<p><img src="/chch/images/study.png" alt="" /></p>
+<p><img src="/chch/images/study.jpg" alt="" /></p>
 
 <h5 id="방학-to-do-list-">방학 to do list :)</h5>
 <ul>
