--- a/page3/index.html
+++ b/page3/index.html
@@ -88,18 +88,16 @@ window.onload = wrap_img;
 
 <h5 id="면담-질문">면담 질문</h5>
 <ul>
-  <li>:)</li>
+  <li>none</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
 
 <h5 id="방학-to-do-list-">방학 to do list :)</h5>
 <ul>
-  <li>데이터 과학자의 사고법(김용대) 완독</li>
   <li>The Functional Art(Alberto Cairo) 보기..(데시 11주차)</li>
   <li>EM알고리즘?</li>
   <li>파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)</li>
-  <li>빅데이터분석 강의</li>
 </ul>
 
 <h1 id="posts">Posts</h1>
