--- a/page3/index.html
+++ b/page3/index.html
@@ -88,7 +88,7 @@ window.onload = wrap_img;
 
 <h5 id="면담-질문">면담 질문</h5>
 <ul>
-  <li>none</li>
+  <li>6주 2번째 learner 로 학습시키는 과정 중</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
