deploy: 58715afc0fa1f133ae0056b0080456b1bbfc682a

--- a/page2/index.html
+++ b/page2/index.html
@@ -89,12 +89,12 @@ window.onload = wrap_img;
 
 <h5 id="면담-질문">면담 질문</h5>
 <ul>
-  <li>6주 2번째 learner 로 학습시키는 과정 중</li>
+  <li>:)</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
 
-<h5 id="방학-to-do-list-">방학 to do list :)</h5>
+<h5 id="to-do-list-">to do list :)</h5>
 <ul>
   <li>The Functional Art(Alberto Cairo) 보기..(데시 11주차)</li>
   <li>EM알고리즘?</li>
