deploy: 43da446d37d89e7eaaead5cb850baf1258c14dcf

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ window.onload = wrap_img;
 
 <h5 id="면담-질문">면담 질문</h5>
 <ul>
-  <li>:)</li>
+  <li>none</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
@@ -96,7 +96,6 @@ window.onload = wrap_img;
 <h5 id="to-do-list-">to do list :)</h5>
 <ul>
   <li>The Functional Art(Alberto Cairo) 보기..(데시 11주차)</li>
-  <li>EM알고리즘?</li>
   <li>파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)</li>
 </ul>
 
