--- a/page3/index.html
+++ b/page3/index.html
@@ -88,7 +88,8 @@ window.onload = wrap_img;
 
 <h5 id="금주-면담-질문">금주 면담 질문</h5>
 <ul>
-  <li>none</li>
+  <li>https://stackoverflow.com/questions/39878813/ggplot-geom-bar-meaning-of-aesgroup-1</li>
+  <li>group=1 옵션?</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
