--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ image: images/logo.png
 ### Welcome :)
 
 ##### 금주 면담 질문
-- https://stackoverflow.com/questions/39878813/ggplot-geom-bar-meaning-of-aesgroup-1
-- group=1 옵션?
+- none
 
 ![]({{site.baseurl}}/images/study.jpg)
 
