--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ image: images/logo.png
 ### Welcome :)
 
 ##### 금주 면담 질문
-- none
+- 에러 아시는지....lock file 지우면..
+![]({{site.baseurl}}/images/lock.JPG)
+
 
 ![]({{site.baseurl}}/images/study.jpg)
 
