deploy: c9ec747b19a1aa6db6c3649514f416a4b4c5e379

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ window.onload = wrap_img;
 
 <h5 id="금주-면담-질문">금주 면담 질문</h5>
 <ul>
-  <li>none</li>
+  <li>에러 아시는지….lock file 지우면..
+<img src="/chch/images/lock.JPG" alt="" /></li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
