--- a/page3/index.html
+++ b/page3/index.html
@@ -88,7 +88,8 @@ window.onload = wrap_img;
 
 <h5 id="금주-면담-질문">금주 면담 질문</h5>
 <ul>
-  <li>none</li>
+  <li>에러 아시는지….lock file 지우면..
+<img src="/chch/images/lock.JPG" alt="" /></li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
