--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ image: images/logo.png
 
 ##### 금주 면담 질문
 - 에러 아시는지....lock file 지우면..
-![]({{site.baseurl}}/images/lock.JPG)
+![]({{site.baseurl}}/images/lock.jpg)
 
 
 ![]({{site.baseurl}}/images/study.jpg)
