--- a/page2/index.html
+++ b/page2/index.html
@@ -89,8 +89,7 @@ window.onload = wrap_img;
 
 <h5 id="금주-면담-질문">금주 면담 질문</h5>
 <ul>
-  <li>에러 아시는지….lock file 지우면..
-<img src="/chch/images/lock.jpg" alt="" /></li>
+  <li>none</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
@@ -99,6 +98,12 @@ window.onload = wrap_img;
 <ul>
   <li>The Functional Art(Alberto Cairo) 보기..(데시 11주차)</li>
   <li>파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)</li>
+</ul>
+
+<p>#####</p>
+<ul>
+  <li>에러 아시는지….lock file 지우면..
+<img src="/chch/images/lock.jpg" alt="" /></li>
 </ul>
 
 <h1 id="posts">Posts</h1>
