--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ image: images/logo.png
 - The Functional Art(Alberto Cairo) 보기..(데시 11주차)
 - 파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)
 
-#####
-- 에러 아시는지....lock file 지우면..
+##### 에러 아시는지....lock file 지우면..
 ![]({{site.baseurl}}/images/lock.jpg)
 
 # Posts
