deploy: d6955901d8cb0243630a46d05770251269e5bd48

--- a/page2/index.html
+++ b/page2/index.html
@@ -100,11 +100,8 @@ window.onload = wrap_img;
   <li>파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)</li>
 </ul>
 
-<p>#####</p>
-<ul>
-  <li>에러 아시는지….lock file 지우면..
-<img src="/chch/images/lock.jpg" alt="" /></li>
-</ul>
+<h5 id="에러-아시는지lock-file-지우면">에러 아시는지….lock file 지우면..</h5>
+<p><img src="/chch/images/lock.jpg" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
