--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ image: images/logo.png
 - 파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)
 
 ##### 에러 아시는지....lock file 지우면..
-![]({{site.baseurl}}/images/lock.jpg)
+![]({{site.baseurl}}/images/lock.JPG)
 
 # Posts
