deploy: 801bd63ef9655f17f585c2ea278c97a897c0faa8

--- a/page2/index.html
+++ b/page2/index.html
@@ -101,7 +101,7 @@ window.onload = wrap_img;
 </ul>
 
 <h5 id="에러-아시는지lock-file-지우면">에러 아시는지….lock file 지우면..</h5>
-<p><img src="/chch/images/lock.jpg" alt="" /></p>
+<p><img src="/chch/images/lock.JPG" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
