deploy: 1a0d1cf3d0468e98085fe6164be5c5c1e1b80c23

--- a/page3/index.html
+++ b/page3/index.html
@@ -99,6 +99,14 @@ window.onload = wrap_img;
   <li>파이썬 공부하고 싶으면(점프 투 파이썬_박응용)(005.133 박응용ㅈ2   중앙도서관/과학기술자료실(2층)/)</li>
 </ul>
 
+<h5 id="website-for-r-study">Website for R study</h5>
+<ul>
+  <li>the website for <strong><a href="https://r4ds.had.co.nz">R for Data Science</a></strong></li>
+  <li>the on-line version of work-in-progress 3rd edition of <strong><a href="https://ggplot2-book.org/">ggplot2: elegant graphics for data analysis</a></strong></li>
+  <li>the website for 2nd edition of <strong><a href="https://adv-r.hadley.nz/">Advanced R</a></strong></li>
+  <li><strong><a href="https://r-pkgs.org/">R packages</a></strong> by Hadley Wickham and Jenny Bryan.</li>
+</ul>
+
 <h1 id="posts">Posts</h1>
 
 
