--- a/page2/index.html
+++ b/page2/index.html
@@ -89,7 +89,7 @@ window.onload = wrap_img;
 
 <h5 id="금주-면담-질문">금주 면담 질문</h5>
 <ul>
-  <li>함수 아래 입력…뭐…..</li>
+  <li>none</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
