--- a/page3/index.html
+++ b/page3/index.html
@@ -89,7 +89,7 @@ window.onload = wrap_img;
 
 <h5 id="금주-면담-질문">금주 면담 질문</h5>
 <ul>
-  <li>none</li>
+  <li>빅데이터 10주차 pdf파일…………</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
