--- a/page4/index.html
+++ b/page4/index.html
@@ -107,6 +107,11 @@ window.onload = wrap_img;
   <li><strong><a href="https://r-pkgs.org/">R packages</a></strong> by Hadley Wickham and Jenny Bryan.</li>
 </ul>
 
+<h5 id="참고용">참고용</h5>
+<ul>
+  <li><strong><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics</a></strong></li>
+</ul>
+
 <h1 id="posts">Posts</h1>
 
 
