--- a/page4/index.html
+++ b/page4/index.html
@@ -86,9 +86,11 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h3 id="welcome-">Welcome :)</h3>
 
-<h5 id="금주-면담-질문">금주 면담 질문</h5>
+<h5 id="면담">면담</h5>
 <ul>
-  <li>none</li>
+  <li>slide !</li>
+  <li>저번주 정리본 설명</li>
+  <li>그 외 기록한 질문</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
