--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ image: images/logo.png
 - 저번주 정리본 설명
 - 그 외 기록한 질문
 
-![]({{site.baseurl}}/images/study.jpg)
+![]({{site.baseurl}}/images/sleeping.jpg)
 
 ##### to do list :)
 - The Functional Art(Alberto Cairo) 보기..(데시 11주차)
