--- a/page3/index.html
+++ b/page3/index.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
   <li>그 외 기록한 질문</li>
 </ul>
 
-<p><img src="/chch/images/study.jpg" alt="" /></p>
+<p><img src="/chch/images/sleeping.jpg" alt="" /></p>
 
 <h5 id="to-do-list-">to do list :)</h5>
 <ul>
