--- a/page3/index.html
+++ b/page3/index.html
@@ -89,9 +89,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>slide !</li>
-  <li>저번주 정리본 설명</li>
-  <li>그 외 기록한 질문</li>
+  <li>none</li>
 </ul>
 
 <p><img src="/chch/images/sleeping.jpg" alt="" /></p>
