deploy: dd80904d20086c2919fc01252a586554efd975cb

--- a/page2/index.html
+++ b/page2/index.html
@@ -102,9 +102,10 @@ window.onload = wrap_img;
   <li><strong><a href="https://r-pkgs.org/">R packages</a></strong> by Hadley Wickham and Jenny Bryan.</li>
 </ul>
 
-<h5 id="참고용">참고용</h5>
+<h5 id="reference">Reference</h5>
 <ul>
   <li><strong><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics</a></strong></li>
+  <li>재부팅시 drop box 키기 <strong>~/.dropbox-dist/dropboxd</strong></li>
 </ul>
 
 <h1 id="posts">Posts</h1>
