deploy: 4093ccfb9c1c579d86c7193e0fbc930bde5ba95d

--- a/page2/index.html
+++ b/page2/index.html
@@ -105,7 +105,7 @@ window.onload = wrap_img;
 <h5 id="reference">Reference</h5>
 <ul>
   <li><strong><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics</a></strong></li>
-  <li>재부팅시 drop box 키기 <strong>~/.dropbox-dist/dropboxd</strong></li>
+  <li>재부팅시 drop box open해주세요~ (~/.dropbox-dist/dropboxd)</li>
 </ul>
 
 <h1 id="posts">Posts</h1>
