deploy: 81309697a9a68aa88e874820638bffd04fa496e4

--- a/page2/index.html
+++ b/page2/index.html
@@ -92,7 +92,7 @@ window.onload = wrap_img;
   <li>none</li>
 </ul>
 
-<p><img src="/chch/images/sleeping.jpg" alt="" /></p>
+<p><img src="/chch/images/Relph.png" alt="" /></p>
 
 <h5 id="website-for-r-study">Website for R study</h5>
 <ul>
