--- a/page5/index.html
+++ b/page5/index.html
@@ -88,7 +88,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>none</li>
+  <li>WGAN 관련~</li>
 </ul>
 
 <p><img src="/chch/images/Relph.png" alt="" /></p>
