deploy: 754f83a62e8160a88163d187ba1eb5bd1727a949

--- a/page5/index.html
+++ b/page5/index.html
@@ -88,7 +88,9 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>WGAN 관련~</li>
+  <li>WGAN 관련</li>
+  <li>HST 논문 관련</li>
+  <li>면담대비공부 중 하나..</li>
 </ul>
 
 <p><img src="/chch/images/Relph.png" alt="" /></p>
