deploy: 8e917ac5c055b9e3b1356b8f2de2d7c925219bec

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>WGAN 관련</li>
-  <li>HST 논문 관련</li>
+  <li>None</li>
 </ul>
 
 <p><img src="/chch/images/Relph.png" alt="" /></p>
