deploy: 2775d14727791c59f63b971b6826a8ed9e531bc7

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ window.onload = wrap_img;
   <li><strong><a href="https://r-pkgs.org/">R packages</a></strong> by Hadley Wickham and Jenny Bryan.</li>
 </ul>
 
+<h5 id="website-for-python-study">Website for Python study</h5>
+<ul>
+  <li>the website for <strong><a href="https://jakevdp.github.io/PythonDataScienceHandbook/">Python Data Science Handbook</a></strong></li>
+</ul>
+
 <h5 id="reference">Reference</h5>
 <ul>
   <li><strong><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics</a></strong></li>
