deploy: 592c55aed4df75ab276074a18c5b76f16994be52

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@ window.onload = wrap_img;
   <li>None</li>
 </ul>
 
+<h5 id="check">Check</h5>
+<ul>
+  <li>재부팅시 drop box open ~ (~/.dropbox-dist/dropboxd)</li>
+</ul>
+
 <p><img src="/chch/images/Relph.png" alt="" /></p>
 
 <h5 id="website-for-r-study">Website for R study</h5>
@@ -109,7 +114,6 @@ window.onload = wrap_img;
 <h5 id="reference">Reference</h5>
 <ul>
   <li><strong><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics">LaTeX/Mathematics</a></strong></li>
-  <li>재부팅시 drop box open해주세요~ (~/.dropbox-dist/dropboxd)</li>
 </ul>
 
 <h1 id="posts">Posts</h1>
