--- a/page3/index.html
+++ b/page3/index.html
@@ -97,7 +97,7 @@ window.onload = wrap_img;
   <li>재부팅시 drop box open ~ (~/.dropbox-dist/dropboxd)</li>
 </ul>
 
-<p><img src="/chch/images/Relph.png" alt="" /></p>
+<p><img src="/chch/images/study.jpg" alt="" /></p>
 
 <h5 id="website-for-r-study">Website for R study</h5>
 <ul>
