deploy: 8447844fe8640189091f95641ba5b2abaac5cde9

--- a/page2/index.html
+++ b/page2/index.html
@@ -90,6 +90,8 @@ window.onload = wrap_img;
 <h5 id="면담">면담</h5>
 <ul>
   <li>folium on HTML</li>
+  <li>진행과정 리뷰</li>
+  <li>계획..</li>
 </ul>
 
 <h5 id="check">Check</h5>
