--- a/page3/index.html
+++ b/page3/index.html
@@ -90,6 +90,8 @@ window.onload = wrap_img;
 <h5 id="면담">면담</h5>
 <ul>
   <li>folium on HTML</li>
+  <li>진행과정 리뷰</li>
+  <li>계획..</li>
 </ul>
 
 <h5 id="check">Check</h5>
