--- a/page5/index.html
+++ b/page5/index.html
@@ -88,14 +88,13 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>folium on HTML</li>
-  <li>진행과정 리뷰</li>
-  <li>계획..</li>
+  <li>none</li>
 </ul>
 
 <h5 id="check">Check</h5>
 <ul>
   <li>재부팅시 drop box open ~ (~/.dropbox-dist/dropboxd)</li>
+  <li>nvidia-smi 로 GPU 상태 확인 ! 안 켜져 있다면? (sudo ./NVIDI(tab누르면 나옴))</li>
 </ul>
 
 <p><img src="/chch/images/study.jpg" alt="" /></p>
