--- a/page2/index.html
+++ b/page2/index.html
@@ -90,6 +90,7 @@ window.onload = wrap_img;
 <h5 id="면담">면담</h5>
 <ul>
   <li>책 관련!</li>
+  <li>shift-invariant ?</li>
 </ul>
 
 <h5 id="check">Check</h5>
