--- a/page3/index.html
+++ b/page3/index.html
@@ -89,8 +89,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>책 관련!</li>
-  <li>shift-invariant ?</li>
+  <li>none</li>
 </ul>
 
 <h5 id="check">Check</h5>
