deploy: c6698aefc7d2ec6e8ed2f22de79a48772423fc50

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ window.onload = wrap_img;
   <li>nvidia-smi 로 GPU 상태 확인 ! 안 켜져 있다면? (sudo ./NVIDI(tab누르면 나옴))</li>
 </ul>
 
-<p><img src="/chch/images/study.jpg" alt="" /></p>
+<p><img src="/chch/images/doh.jpg" alt="" /></p>
 
 <h5 id="website-for-r-study">Website for R study</h5>
 <ul>
