--- a/page5/index.html
+++ b/page5/index.html
@@ -88,7 +88,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>none</li>
+  <li>vertex 가 겹치는게 없다면, time이..적용된…상태일까….</li>
 </ul>
 
 <h5 id="check">Check</h5>
