--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ image: images/logo.png
 
 ##### 면담
 - vertex 가 겹치는게 없다면, time이..적용된...상태일까....
+- tensor inverse error 2주차
 
 ##### Check
 - 재부팅시 drop box open ~ (~/.dropbox-dist/dropboxd)
