--- a/page4/index.html
+++ b/page4/index.html
@@ -89,8 +89,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>vertex 가 겹치는게 없다면, time이..적용된…상태일까….</li>
-  <li>tensor inverse error 2주차</li>
+  <li>none</li>
 </ul>
 
 <h5 id="check">Check</h5>
