deploy: 416475112cf331143188bf8330cd60c991778011

--- a/page2/index.html
+++ b/page2/index.html
@@ -90,6 +90,7 @@ window.onload = wrap_img;
 <h5 id="면담">면담</h5>
 <ul>
   <li>bds 2주차 ?</li>
+  <li>earth p.sum ?</li>
 </ul>
 
 <h5 id="check">Check</h5>
