--- a/page5/index.html
+++ b/page5/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
 <h5 id="check">Check</h5>
 <ul>
   <li>재부팅시 drop box open ~ (~/.dropbox-dist/dropboxd)</li>
-  <li>nvidia-smi 로 GPU 상태 확인 ! 안 켜져 있다면? (sudo ./NVIDI(tab누르면 나옴))</li>
+  <li>nvidia-smi 로 GPU 상태 확인 ! 안 켜져 있다면? (sudo ./NVIDIA-Linux-x86_64-495.46.run(tab누르면 나옴))</li>
 </ul>
 
 <p><img src="/chch/images/smrt.jpg" alt="" /></p>
