--- a/page4/index.html
+++ b/page4/index.html
@@ -89,7 +89,8 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>none</li>
+  <li>ms repository</li>
+  <li>graph showing ex</li>
 </ul>
 
 <h5 id="check">Check</h5>
