deploy: 24aa247fc3ec8a8f9cdddea08aec03b7279d3e20

--- a/page5/index.html
+++ b/page5/index.html
@@ -90,6 +90,7 @@ window.onload = wrap_img;
 <ul>
   <li>ms repository</li>
   <li>graph showing ex</li>
+  <li>pluto 관련 2개</li>
 </ul>
 
 <h5 id="check">Check</h5>
