deploy: 969127b7cadbd5e8d7600bee6b6fe2a90f6963a2

--- a/page2/index.html
+++ b/page2/index.html
@@ -91,7 +91,8 @@ window.onload = wrap_img;
 <ul>
   <li>ms repository</li>
   <li>graph showing ex</li>
-  <li>pluto 관련 2개</li>
+  <li>pluto 관련 ssh, site</li>
+  <li>f<em>psi</em>psi</li>
 </ul>
 
 <h5 id="check">Check</h5>
