--- a/page6/index.html
+++ b/page6/index.html
@@ -88,8 +88,7 @@ window.onload = wrap_img;
 
 <h5 id="면담">면담</h5>
 <ul>
-  <li>ms repository</li>
-  <li>f<em>psi</em>psi</li>
+  <li>none</li>
 </ul>
 
 <h5 id="check">Check</h5>
