--- a/page5/index.html
+++ b/page5/index.html
@@ -95,7 +95,7 @@ window.onload = wrap_img;
 
 <p><img src="/chch/images/smrt.jpg" alt="" /></p>
 
-<h5 id="website-for-r-study">Website for R study</h5>
+<h5 id="r-study">R study</h5>
 <ul>
   <li>the website for <strong><a href="https://r4ds.had.co.nz">R for Data Science</a></strong></li>
   <li>the on-line version of work-in-progress 3rd edition of <strong><a href="https://ggplot2-book.org/">ggplot2: elegant graphics for data analysis</a></strong></li>
@@ -103,7 +103,7 @@ window.onload = wrap_img;
   <li><strong><a href="https://r-pkgs.org/">R packages</a></strong> by Hadley Wickham and Jenny Bryan.</li>
 </ul>
 
-<h5 id="website-for-python-study">Website for Python study</h5>
+<h5 id="python-study">Python study</h5>
 <ul>
   <li>the website for <strong><a href="https://jakevdp.github.io/PythonDataScienceHandbook/">Python Data Science Handbook</a></strong></li>
 </ul>
