--- a/page5/index.html
+++ b/page5/index.html
@@ -105,7 +105,8 @@ window.onload = wrap_img;
 
 <h5 id="python-study">Python study</h5>
 <ul>
-  <li>the website for <strong><a href="https://jakevdp.github.io/PythonDataScienceHandbook/">Python Data Science Handbook</a></strong></li>
+  <li>the website for <strong><a href="https://jakevdp.github.io/PythonDataScienceHandbook/">Python Data Science Handbook</a></strong>
+<img src="/chch/images/lnnr.jpg" alt="" /></li>
 </ul>
 
 <h5 id="reference">Reference</h5>
